Safari365 Prod/src/objects/SOD__c.object
<CustomObject>
    <description>Supplier Overall Policy</description>
    <fields>
        <fullName>ADULT_FROM__c</fullName>
        <label>ADULT_FROM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADULT_TO__c</fullName>
        <label>ADULT_TO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHILD_FROM__c</fullName>
        <label>CHILD_FROM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHILD_TO__c</fullName>
        <label>CHILD_TO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM_Lookup</label>
        <referenceTo>CRM__c</referenceTo>
        <relationshipLabel>SODs</relationshipLabel>
        <relationshipName>SODs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOUBLE_AD_MAX__c</fullName>
        <label>DOUBLE_AD_MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOUBLE_AVAIL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOUBLE_AVAIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOUBLE_MAX__c</fullName>
        <label>DOUBLE_MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INCLUDE_FRI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INCLUDE_FRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INCLUDE_MON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INCLUDE_MON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INCLUDE_SAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INCLUDE_SAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INCLUDE_SUN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INCLUDE_SUN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INCLUDE_THU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INCLUDE_THU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INCLUDE_TUE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INCLUDE_TUE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INCLUDE_WED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INCLUDE_WED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INFANT_FROM__c</fullName>
        <label>INFANT_FROM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INFANT_TO__c</fullName>
        <label>INFANT_TO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTHER_AD_MAX__c</fullName>
        <label>OTHER_AD_MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTHER_AVAIL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OTHER_AVAIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTHER_MAX__c</fullName>
        <label>OTHER_MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POLICY_TYPE__c</fullName>
        <label>POLICY_TYPE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUAD_AD_MAX__c</fullName>
        <label>QUAD_AD_MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QUAD_AVAIL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QUAD_AVAIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QUAD_MAX__c</fullName>
        <label>QUAD_MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SINGLE_AD_MAX__c</fullName>
        <label>SINGLE_AD_MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SINGLE_AVAIL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SINGLE_AVAIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SINGLE_MAX__c</fullName>
        <label>SINGLE_MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOD_ID__c</fullName>
        <externalId>true</externalId>
        <label>SOD_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>START_FRI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>START_FRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>START_MON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>START_MON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>START_SAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>START_SAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>START_SUN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>START_SUN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>START_THU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>START_THU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>START_TUE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>START_TUE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>START_WED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>START_WED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIPLE_AD_MAX__c</fullName>
        <label>TRIPLE_AD_MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIPLE_AVAIL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TRIPLE_AVAIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIPLE_MAX__c</fullName>
        <label>TRIPLE_MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TWIN_AD_MAX__c</fullName>
        <label>TWIN_AD_MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TWIN_AVAIL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TWIN_AVAIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TWIN_MAX__c</fullName>
        <label>TWIN_MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SOD</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SOD_ID__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CRM_Lookup__c</columns>
        <columns>INCLUDE_FRI__c</columns>
        <columns>INCLUDE_MON__c</columns>
        <columns>INCLUDE_SAT__c</columns>
        <columns>INCLUDE_THU__c</columns>
        <columns>INCLUDE_WED__c</columns>
        <columns>START_FRI__c</columns>
        <columns>START_MON__c</columns>
        <columns>START_SAT__c</columns>
        <columns>START_THU__c</columns>
        <columns>START_WED__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SOD-{00000000}</displayFormat>
        <label>SOD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SODs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>